--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -411,10 +411,6 @@
         "  model1=LeakyReLU(0.2)(model1)\n",
         "  \n",
         "  model1=GlobalAveragePooling2D()(model1)\n",
-        "  #model1=Flatten()(model1)\n",
-        "  #model1=Dense(512,activation='sigmoid')(model1)\n",
-        "  #model1=Dense(128,activation='sigmoid')(model1)\n",
-        "  #model1=Dense(32,activation='sigmoid')(model1)\n",
         "  model1=Dense(1,activation='sigmoid')(model1)\n",
         "  return Model(inputs=img,output=model1)"
       ],
@@ -438,27 +434,21 @@
         "  \n",
         "  model2=Deconvolution2D(64, 5, strides=2,padding='same')(model2)\n",
         "  model2=BatchNormalization()(model2)\n",
-        "  model2=LeakyReLU(0.2)(model2)\n",
+        "  \n",
         "  model2=Deconvolution2D(32, 5, strides=2,padding='same')(model2)\n",
         "  model2=BatchNormalization()(model2)\n",
-        "  model2=LeakyReLU(0.2)(model2)\n",
         "  model2=Deconvolution2D(32, 5, strides=2,padding='same')(model2)\n",
         "  model2=BatchNormalization()(model2)\n",
-        "  model2=LeakyReLU(0.2)(model2)\n",
+        "  \n",
         "  model2=Deconvolution2D(16, 5, strides=2,padding='same')(model2)\n",
         "  model2=BatchNormalization()(model2)\n",
-        "  model2=LeakyReLU(0.2)(model2)\n",
+        "  \n",
         "  model2=Deconvolution2D(16, 5, strides=2,padding='same')(model2)\n",
         "  model2=BatchNormalization()(model2)\n",
-        "  #model2=Deconvolution2D(64, 5, padding='same')(model2)\n",
-        "  #model2=BatchNormalization()(model2)\n",
-        "  #model2=Deconvolution2D(64, 5, padding='same')(model2)\n",
-        "  #model2=BatchNormalization()(model2)\n",
         "  model2=LeakyReLU(0.2)(model2)\n",
         "  \n",
         "  model2=Conv2D(3,5,padding='same',activation='tanh')(model2)\n",
-        "  #model2=Reshape(target_shape=(128,128,3))\n",
-        "  \n",
+        "    \n",
         "  return Model(inputs=img,outputs=model2)\n",
         "  "
       ],
@@ -705,14 +695,13 @@
         }
       },
       "source": [
-        "NUM_SAMPLES = 7\n",
-        "plt.figure(figsize=(NUM_SAMPLES * 3, 3))\n",
+        "samples=7\n",
+        "plt.figure(figsize=(sample * 3, 3))\n",
         "\n",
-        "for i in range(NUM_SAMPLES):\n",
+        "for i in range(samples):\n",
         "    noise = np.random.randn(1, 128) \n",
-        "    pred_raw = gen.predict(noise)[0]\n",
-        "    pred = pred_raw * 0.5 + 0.5\n",
-        "    plt.subplot(1, NUM_SAMPLES, i + 1)\n",
+        "    pred = gen.predict(noise)[0]\n",
+        "    plt.subplot(1, NUM, i + 1)\n",
         "    plt.imshow(pred)\n",
         "plt.show()"
       ],
